# hook86

./: Cargo.toml  README.md
hook86/: Cargo.toml
hook86/src/: asm.rs  crash.rs  input.rs  lib.rs  mem.rs  patch.rs
hook86_core/: Cargo.toml
hook86_core/src/: lib.rs
hook86_macro/: Cargo.toml
hook86_macro/src/: lib.rs
