[package]
name = "hook86"
version = "0.1.0"
authors = ["descawed <github@descawed.com>"]
edition = "2024"
description = "A Rust library for DLL-injection hacks on x86"
readme = "../README.md"
repository = "https://github.com/descawed/hook86"

[dependencies]
hook86_macro = { path = "../hook86_macro" }
log = { version = "0.4.28", optional = true }
memchr = "2.8.0"
thiserror = "2.0.17"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Kernel", "Win32_System_SystemServices", "Win32_System_Threading", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse"] }
windows-result = "0.4.1"

[features]
default = []
crash_logging = ["log"]